# vide

./: .gitignore
colors/: gruvbox.lua
lua/lazyvim/config/: init.lua  keymaps.lua  options.lua
lua/lazyvim/plugins/: coding.lua  colorscheme.lua  editor.lua  ui.lua
lua/lazyvim/plugins/extras/editor/: aerial.lua  goto-preview.lua  inc-rename.lua  navbuddy.lua  navic.lua  neogen.lua  treesj.lua  zen-mode.lua
lua/lazyvim/plugins/extras/lang/: rust.lua
lua/lazyvim/plugins/extras/ui/: mini-indentscope.lua  scrollbar.lua
lua/vide/: init.lua  util.lua
lua/vide/colors/: gruvbox.lua  gruvbox.t.lua
lua/vide/fs/: init.lua
lua/vide/test/: init.lua
lua/vide/types/: vide.api.lua  vide.client.lua  vide.lua  vide.types.lua  vide.util.lua
lua/vide/ui/: init.lua  win.lua  win_spec.lua
rust/: Cargo.toml
rust/vide/: Cargo.toml
rust/vide/src/: dev.rs  lib.rs  marcos.rs
rust/vide/src/client/: mod.rs  option.rs  size.rs
rust/vide/src/types/: ui.rs
rust/vide/src/ui/: cursor.rs  mod.rs
rust/vide/src/util/: async_runtime.rs  mod.rs
scripts/: build_vide
starter/: init.lua
starter/lua/config/: keymaps.lua  lazy.lua  options.lua
