[workspace]
members = ["vide"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Cator Vee <catorwei@gmail.com>"]
license = "Apache u2"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-10", "libuv", "test"] }
serde = { version = "1" }
tokio = { version = "1", features = ["full"] }
